@@ -71,7 +71,6 @@ namespace libtorrent
 			, connection_queue& cc
 			, tracker_manager& man
 			, tracker_request const& req
-			, address bind_infc
 			, boost::weak_ptr<request_callback> c
 			, aux::session_impl const& ses
 			, proxy_settings const& ps);
@@ -112,6 +111,7 @@ namespace libtorrent
 		udp::resolver m_name_lookup;
 		udp_socket m_socket;
 		udp::endpoint m_target;
+		std::list<udp::endpoint> m_endpoints;
 
 		int m_transaction_id;
 		boost::int64_t m_connection_id;
